[package]
name = "tokio-redis"
version = "0.1.0"
edition = "2021"
about = "a tokio mini-redis"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
name = "server"
path = "src/bin/server.rs"

[[bin]]
name = "cli"
path = "src/bin/cli.rs"


[dependencies]
tokio = {version = "1", features= ["full"]}
anyhow = "1.0.68"
tracing = "0.1.37"
tracing-subscriber = {version = "0.3.16", features= ["env-filter"]}
tracing-futures = "0.2.5"
tracing-opentelemetry = "0.18.0"
opentelemetry-jaeger = "0.17.0"
clap = { version = "4.0.32", features = ["derive"] }
bytes = "1.1.0"


